--- a/src/app/domestic-flows/domestic-flows.component.html
+++ b/src/app/domestic-flows/domestic-flows.component.html
@@ -189,6 +189,9 @@
           </div>
         </div>
       </div>
+      <div *ngIf="loading" class="spinner-container">
+        <div class="spinner"></div>
+      </div>
       <div class="home-container">
         <button class="run-button" (click)="onRun()">
           Download CSV
