--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -23,14 +23,14 @@
       <!-- Add other sections if needed -->
       <div class="carousel-item">
         <h3>Our Team</h3>
-        <p>Data to Insight Center (D2I).</p>
-        <p>
-          For more information, visit our official website: 
-          <a href="https://pti.iu.edu/centers/d2i/index.html" target="_blank" rel="noopener noreferrer">
-            https://pti.iu.edu/centers/d2i/index.html
-          </a>
-        </p>
+        <p>The Data to Insight Center (D2I) at Indiana University and the University of Oregon.</p>
+        <p>Thanks to colleagues at Texas Advanced Computing Center (TACC) who are hosting the FAF API as part of the NSF AI ICICLE Institute. Thanks to the US Bureau of Transportation Statistics Freight Analysis Framework for guidance.</p>
+<!--        <p>-->
+<!--          For more information, visit our official website: -->
+<!--          <a href="https://pti.iu.edu/centers/d2i/index.html" target="_blank" rel="noopener noreferrer">-->
+<!--            https://pti.iu.edu/centers/d2i/index.html-->
+<!--          </a>-->
+<!--        </p>-->
       </div>
     </div>
   </div>
-  
