--- a/src/app/domestic-flows/domestic-flows.component.html
+++ b/src/app/domestic-flows/domestic-flows.component.html
@@ -239,9 +239,9 @@
       <div *ngIf="loading" class="spinner-container">
         <div class="spinner"></div>
       </div>
-      <div class="home-container">
+      <!-- <div class="home-container">
         <button class="run-button" (click)="onRun()">Run</button>
-      </div>
+      </div> -->
       <div class="chart-container">
         <canvas style="height: 400px;width: 400px;" #pieChartCanvas></canvas>
       </div>
